[metadata]
name = networking-cumulus
author = Mirantis
author-email = mos-ironic@mirantis.com
home-page = https://github.com/openstack/networking-generic-switch
summary = Cumulus Linux ML2 Neutron Driver
classifier =
    Development Status :: 3 - Alpha
    Programming Language :: Python
description-file =
    README.rst

[files]
packages =
    networking_cumulus

[entry_points]
console_scripts =
     neutron-cumulus-agent = networking_cumulus.ml2.agent.cumulus_agent:main
neutron.ml2.mechanism_drivers =
    cumulus = networking_cumulus.ml2.mech_driver.cumulus_mech:CumulusLBAgentMechanismDriver
#tempest.test_plugins =
#    ngs_tests = tempest_plugin.plugin:NGSTempestPlugin

#[build_sphinx]
#source-dir = doc/source
#build-dir = doc/build
#all_files = 1
