[metadata]
name = networking-cumulus
version = 1.0.1
summary = Cumulus ML2 driver
description-file =
	README.rst
author = Cumulus Networks
author-email = cumulus-ml2@cumulusnetworks.com
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
	networking_cumulus

data_files = 
	/etc/neutron/plugins/ml2/ = etc/neutron/plugins/ml2/ml2_conf_cumulus.ini

[entry_points]
neutron.ml2.mechanism_drivers =
	cumulus = networking_cumulus.mech_driver.driver:CumulusMechanismDriver

neutron.db.alembic_migrations =
    networking-cumulus = networking_cumulus.db.migration:alembic_migrations

[global]
setup-hooks =
	pbr.hooks.setup_hook

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = networking_cumulus/locale/networking-cumulus.pot

[compile_catalog]
directory = networking_cumulus/locale
domain = networking-cumulus

[update_catalog]
domain = networking-cumulus
output_dir = networking_cumulus/locale
input_file = networking_cumulus/locale/networking-cumulus.pot
